src/common/common-style/project.scss
@use './vars.scss' as *;

.project{
  width: 100%;
  margin-bottom: 106px;
  &--page{
    padding-top: 106px;
    margin-bottom: 106px;

    .project__list{
      margin-bottom: 81px;
    }
    .main-title--small-projects-completed{
      margin-bottom: 50px;
    }



    .project__info{
      flex-direction: column;

      .main-title{
        margin-bottom: 0px;
        &::before{
          content: "";
          display: none;
        }
      }
    }
  }
  &__content{
    .main-title--projects-completed{
      margin-bottom: 50px;

    }
  }
  &__info{
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
    
    .main-title{
      position: relative;

      &::before{
        content: "";
        display: block;
        width: 511px;
        height: 1px;
        background-color: $primary;
        position: absolute;
        transform: translate(100%, -50%);
        right: -16px;
        top: 50%;

      }
      &--projects{
        font-size: 32px;
        margin-bottom: 48px;
      }
    }
    .project__link{
      color: $white;
      transition: .5s;
      position: relative;
      &::before {
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        inset: 6px;
        transform: translate(-5px, -10px);
        z-index: -1;
        background: $primary;
        filter: blur(20px);
        transition: 0.5s;
        opacity: 0;
    }
      &:hover::before {
          opacity: 0.5;
      }
      &:hover{
        color: $primary;
      }
    }


  }
  &__list{
    display: flex;
    align-items: flex-start;
    gap: 20px;
    // flex-wrap: wrap;

  }
  &__item{
    max-width: 352px;
    width: 100%;
    display: flex;
    flex-direction: column;
    height: auto;

    border: $gray 1.5px solid;
    .project__img{
      width: 100%;
      max-width: 350px;
      height: 200px;
      object-fit: cover;
    }
    .project__used{
      border: $gray 1px solid;
      font-size: 16px;
      color: $gray;
      padding: 8px;

    }
    .project__main-info{
      padding: 16px;
      flex: 1;
      display: flex;
      flex-direction: column;
    }
    .project__title{
      font-size: 24px;
      margin-bottom: 12px;

    }
    .project__subtitle{
      font-size: 16px;
      color: $gray;
      margin-bottom: 16px;
      flex: 1;
      word-wrap: break-word;
    }
    .project__btn-links{
      display: flex;
      gap: 16px;
    }
  }
}
.project__subtitle{
  font-size: 16px;
  color: $white;
  font-weight: 500;
  margin-top: 16px;
}

.main-title--projects-completed,
.main-title--small-projects-completed,
.main-title--facts {
  @media (max-width: 768px) {
    font-size: 20px;
    margin-bottom: 24px;
  }
}

@media (max-width: 768px) {
  .project {
    margin-bottom: 60px;

    &--page {
      padding-top: 100px;
      margin-bottom: 60px;
    }

    &__content {
      padding: 0 20px;
    }

    &__info {
      flex-direction: column;
      align-items: flex-start;
      gap: 20px;
      margin-bottom: 30px;

      .main-title {
        font-size: 24px;
        margin-bottom: 16px;

        &::before {
          display: none;
        }

        &--projects {
          font-size: 24px;
          margin-bottom: 24px;
        }
      }

      .project__link {
        font-size: 14px;
      }
    }

    &__list {
      flex-direction: column;
      gap: 16px;
    }

    &__item {
      max-width: 100%;
      width: 100%;

      .project__img {
        max-width: 100%;
      }
    }
  }
}

